# OpenGL-experients

./: CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: Main.cpp.0A01DCC1AE44947D.idx  context.c.6C7D43AB2D68E9C8.idx  egl_context.c.75C52B66FA070A75.idx  glfw3.h.1CE76BC33C8DB4A8.idx  glfw3native.h.1C268DF93AD65810.idx  glx_context.c.30C70EA05B0E2707.idx  init.c.5078F3DDBD473F03.idx  input.c.51814EC2359A1155.idx  internal.h.51ED9EE6BA071E2C.idx  linux_joystick.c.1EFA3EC36D126024.idx  linux_joystick.h.AC8878677BECC6CF.idx  mappings.h.0D9FC08288B302F1.idx  monitor.c.0690EA55355D9DA3.idx  null_init.c.984E108A9AFE47A9.idx  null_joystick.c.6C5723F982CC2119.idx  null_joystick.h.F193055B7EA99D92.idx  null_monitor.c.03A02336131C9571.idx  null_platform.h.BC0AE2C43BF58222.idx  null_window.c.EC071C8C69EB3FAB.idx  osmesa_context.c.9A7ADFF2791C5495.idx  platform.c.7602C560FBF8C7EB.idx  platform.h.D7938AB3B80F2145.idx  posix_module.c.1739DA97CFBD9417.idx  posix_poll.c.CFDCE35B68FA7FF2.idx  posix_poll.h.790A806B1F8F6A71.idx  posix_thread.c.6E96E83A0AB0964F.idx  posix_thread.h.79466C89C3CC224D.idx  posix_time.c.229AFEC819651FEB.idx  posix_time.h.841EFCA9A91AF927.idx  vulkan.c.7D8FD0FF0A8DACB8.idx  window.c.18C122E94166B9D2.idx  wl_init.c.22D4691A5BAE78BC.idx  wl_monitor.c.9CB3701390BDA493.idx  wl_platform.h.588C67A80715C629.idx  wl_window.c.E1D5E0DF51126343.idx  (+6 more)
res/shaders/: fragment.glsl
shaders/: fragment.glsl
src/: IndexBuffer.cpp  IndexBuffer.hpp  Main.cpp  Render.cpp  Render.hpp  Renderer.cpp  Renderer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
